module/core/former/tests/inc/struct_tests/compiletime/struct_attr_bad.stderr
error: cannot find attribute `defaultx` in this scope
 --> tests/inc/struct_tests/compiletime/struct_attr_bad.rs:4:4
  |
4 | #[ defaultx ]
  |    ^^^^^^^^
